--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -8,6 +8,6 @@
 <h3>Jhon Wick</h3>
 <p>Es una pelicula de accion que narra la historia de un ex asesino a sueldo que a la fuerza es regresado a su vida de
     caos solo por que al parecer su pasado jamas lo dejara sino hasta que muera</p>
-<h3>The amazing spoder-man</h3>
+<h3>The amazing spider-man</h3>
 <p>Es una pelcula basada en un super heroe de comics que apesar de que tiene varias adaptaciones al cine, esta version
     es la que hasta ahora me a gustado mas</p>
